# spyre

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  README_DEMOS.md  advection.py  debug_grid.cpp  debug_transform.cpp  debug_transform2.cpp  debug_transform3.cpp  heat_animation.py  heat_animation_demo.py  heat_checkerboard.py  heat_demo_adaptive.py  heat_diffusivity_comparison.py  heat_equation.py  heat_example.cpp  heat_multiple_sources.py  heat_pole_to_pole.py  heat_rings.py  heat_spherical_harmonics.py  quick_test.cpp  test_energy_conservation.py
include/spyre/: field.hpp  grid.hpp  solver.hpp  spyre.hpp  transform.hpp  types.hpp
python/: README.md  pyproject.toml
python/spyre/: __init__.py  animation.py  plotting.py
python/src/: bindings.cpp
src/core/: field.cpp
src/grid/: equiangular.cpp  gauss_legendre.cpp
src/solver/: heat.cpp
src/transform/: spherical_harmonics.cpp
tests/: CMakeLists.txt  test_field.cpp  test_grid.cpp  test_transform.cpp
